frontend/src/assets/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Chewy&display=swap");
@layer theme, base, components, utilities;
@import "tailwindcss";

@theme {
  --font-fancy: "Chewy", system-ui;

  --color-primary-bg: #e5e5e5;
  --color-third-bg: #d1d8c7;
  --color-footer-bg: #303b36;

  --color-cbg-one: #a3dcd5;
  --color-cbg-two: #bddffa;
  --color-cbg-three: #e7b89c;
  --color-cbg-four: #d1d8c7;
  --color-cbg-five: #d5bdaf;

  --color-main-text: #3a4344;
  --color-highlight: #015950;
  --color-highlight-two: #a98467;
  --color-white-text: #f6f8ee;
  --color-link-text: #c2c5aa;

  --color-button: #81f18e;
  --color-button-border: #4a5a4d;

  --color-gradient: #addfff;
}

:root {
  --secondary-bg: #e5e5e5;
  --third-bg: #d1d8c7;
  --footer-bg: #303b36;

  --cbg-one: #a3dcd5;
  --cbg-two: #bddffa;
  --cbg-three: #e7b89c;
  --cbg-four: #d1d8c7;
  --cbg-five: #d5bdaf;

  --text: #3a4344;
  --highlight: #015950;
  --highlight-two: #a98467;
  --white-text: #f6f8ee;
  --link-text: #c2c5aa;

  --button: #81f18e;
  --button-border: #4a5a4d;

  --gradient: #addfff;
}

html {
  scroll-behavior: smooth;
  overflow-x: hidden;
  height: 100%;
  scroll-behavior: smooth;
}

* {
  box-sizing: border-box;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
body {
  min-width: 300px;
  /* Primary Color */
  background-color: #e5e5e5;
  overflow: hidden;
  height: 100%;
}

.btn {
  text-decoration: none;
  text-transform: capitalize;
  text-align: center;
  color: white;
  padding: 7px 30px;
  border-radius: 40px;
  width: 100%;
  min-width: max-content;
  cursor: pointer;
  border: none;
}

.outline-btn {
  background-color: transparent;

  /* --button-border */
  border: 2px solid #4a5a4d;
  font-weight: bolder;
  color: #3a4344;
}
.outline-btn:hover {
  color: #015950;
  border-color: #015950;
}

.filled-btn {
  /* background-color: var(--button); */
  background-color: #45646d;
  color: white;
  border: 3px solid #45646d;
  transition: background 0.3s ease-in-out;
}
.filled-btn:hover {
  background-color: #2f4858;
  background-position: right top;
  border-color: #2f4858;
}

.scrollbar::-webkit-scrollbar {
  width: 8px;
  height: 8px;
  align-self: center;
}
.scrollbar::-webkit-scrollbar-track {
  border-radius: 10px;
}
.scrollbar::-webkit-scrollbar-thumb {
  background: #2f4858;
  border-radius: 30px;
}
.scrollbar::-webkit-scrollbar-thumb:hover {
  background: #2b5876;
}

.scrollbar-horizontal::-webkit-scrollbar {
  width: 8px;
  height: 10px;
  align-self: center;
}
.scrollbar-horizontal::-webkit-scrollbar-track {
  border-radius: 10px;
  margin-left: 3.8rem;
}
.scrollbar-horizontal::-webkit-scrollbar-thumb {
  background: #2f4858;
  border-radius: 30px;
}
.scrollbar-horizontal::-webkit-scrollbar-thumb:hover {
  background: #2b5876;
}

